--- a/.gitignore
+++ b/.gitignore
@@ -136,5 +136,5 @@ cython_debug/
 
 # Data files
 *.csv
-*.joblib
-*.json
+# *.joblib  <-- Modified to allow model files
+# *.json    <-- Modified to allow spam_words.json
